log
sá., 19 de mar. de 2022 16:28:47: 
 tests:  0|6
total_score: 0/70
1893bd1
sá., 19 de mar. de 2022 16:32:03: 
 list.c | 23 ++++++++++++++++++++++-
 1 file changed, 22 insertions(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
0bca006
sá., 19 de mar. de 2022 16:33:10: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: conflicting types for 'dato'
   List* dato = (List*) malloc (sizeof(List));
         ^~~~
list.c:32:10: note: previous declaration of 'dato' was here
     List dato;
          ^~~~
Compilation failed
9fb0188
sá., 19 de mar. de 2022 16:33:24: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: redeclaration of 'dato' with no linkage
   List* dato = (List*) malloc (sizeof(List));
         ^~~~
list.c:32:11: note: previous declaration of 'dato' was here
     List *dato;
           ^~~~
Compilation failed
bec436b
sá., 19 de mar. de 2022 16:33:38: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
fa32755
sá., 19 de mar. de 2022 16:34:36: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:24: error: too few arguments to function 'calloc'
   List* dato = (List*) calloc (sizeof(List));
                        ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
Compilation failed
c4f37bc
sá., 19 de mar. de 2022 16:35:57: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:32: error: expected expression before 'List'
   List* dato = (List*) calloc (List*sizeof(List));
                                ^~~~
list.c:33:24: error: too few arguments to function 'calloc'
   List* dato = (List*) calloc (List*sizeof(List));
                        ^~~~~~
In file included from test.c:2:0:
c:\mingw\include\stdlib.h:484:40: note: declared here
 _CRTIMP __cdecl __MINGW_NOTHROW  void *calloc (size_t, size_t) __MINGW_ATTRIB_MALLOC;
                                        ^~~~~~
Compilation failed
bc58698
sá., 19 de mar. de 2022 16:37:25: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
dc09755
sá., 19 de mar. de 2022 16:45:03: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: redefinition of 'dato'
   List* dato = (List*) malloc (sizeof(List));
         ^~~~
list.c:32:11: note: previous definition of 'dato' was here
     List *dato=NULL;
           ^~~~
Compilation failed
88cf7cc
sá., 19 de mar. de 2022 16:46:14: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 15/70
c8ec1a3
sá., 19 de mar. de 2022 17:08:25: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  5|4
total_score: 25/70
cbefb4c
sá., 19 de mar. de 2022 17:16:22: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
7f4a031
sá., 19 de mar. de 2022 17:17:38: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
0581c3c
sá., 19 de mar. de 2022 17:18:24: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 25/70
510947f
